<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.ojeda.manuel.contactos.Confirmacion">

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titulo_activity2"
        android:textSize="@dimen/titulo_activity2"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="nombre"
        />

    <LinearLayout
        android:id="@+id/LinearLayout_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin">

        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_confirmacion"/>

        <TextView
            android:id="@+id/tvfechaUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin">

        <TextView
            android:id="@+id/tvtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_confirmacion"/>

        <TextView
            android:id="@+id/tvtelUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin">

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_confirmacion"/>

        <TextView
            android:id="@+id/tvemailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_margin">

        <TextView
            android:id="@+id/tvdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_confirmacion"/>

        <TextView
            android:id="@+id/tvdescripUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btEditar"
        android:layout_width="@dimen/width_botonEdit"
        android:layout_height="wrap_content"
        android:text="@string/editar_boton"
        android:textStyle="italic"
        android:textSize="@dimen/letra_editarbt"
        android:layout_gravity="center"
        android:theme="@style/boton_editar"
        android:layout_marginTop="@dimen/marginTop_btn"/>

</LinearLayout>
